# gamma

./: .gitignore  CMakeLists.txt  LICENSE  README.md
doc/doxygen/: Doxyfile
include/: CMakeLists.txt
include/gamma/: InternalCoords.hpp  ProgramController.hpp  almoscf.hpp  atom.hpp  basis.hpp  basisreader.hpp  cc.hpp  cphf.hpp  diis.hpp  eigen_util.hpp  eigen_wrapper.hpp  error.hpp  fock.hpp  integrals.hpp  ioutil.hpp  logger.hpp  mathutil.hpp  molecule.hpp  mp2.hpp  optimiser.hpp  rpa.hpp  scf.hpp  sto3g_atomic_density.hpp  tensor4.hpp
share/gamma/basislibrary/: basis.list  buildlibrary.py  ecp.list  jkfit.list  makelist.py  mp2fit.list  parsebasis.py
share/gamma/basislibrary/bases/jkfit/: avdz.jkfit  avqz.jkfit  avtz.jkfit  def2qzvpp.jkfit  vdz.jkfit  vqz.jkfit  vtz.jkfit
share/gamma/basislibrary/bases/mp2fit/: avdz.mp2fit  avqz.mp2fit  avtz.mp2fit  vdz.mp2fit  vdzf12.mp2fit  vqz.mp2fit  vtz.mp2fit
share/gamma/basislibrary/bases/orbital/: 6-311g.basis  6-311gd.basis  6-311gdp.basis  6-31g.basis  av5z.basis  av5zpp.basis  avdz.basis  avdzpp.basis  avqz.basis  avqzpp.basis  avsz.basis  avtz.basis  avtzpp.basis  def2-qzvp.basis  def2-qzvpp.basis  def2-svp.basis  def2-tzvp.basis  def2-tzvpp.basis  lanl2dz.basis  (+10 more)
share/gamma/examples/: ammoniadimer.mol  ar.mol  ar2.mol  benzene-dz.mol  benzene.mol  benzenedimer.mol  br.mol  br2test.mol  c6h5clin.mol  cdthe.mol  ch3br.mol  cytosine.mol  cytosine_guanine.mol  fclph3.mol  formamidedimer.mol  h2mb.mol  h2o.mol  h2odimer.mol  h2ohcl.mol  h2otest.mol  h2ref.mol  h2test.mol  hbr.mol  he1f.mol  he2mb.mol  he2optx.mol  he2ref.mol  he3.mol  he3ref.mol  he_nuc.mol  he_nuc_x.mol  he_nuc_xq.mol  hedimer.mol  heh2ooptx.mol  helium.mol  hene.mol  heneoptx.mol  heref.mol  hf.mol  hfdimer.mol  (+17 more)
src/: CMakeLists.txt  InternalCoords.cpp  ProgramController.cpp  almoscf.cpp  atom.cpp  basis.cpp  basisreader.cpp  cc.cpp  cphf.cpp  diis.cpp  eigen_wrapper.cpp  eris.cpp  error.cpp  fock.cpp  fockbuild.cpp  gamma.cpp  integrals.cpp  ioutil.cpp  logger.cpp  mathutil.cpp  molecule.cpp  mp2.cpp  optimiser.cpp  rhfgrad.cpp  rpa.cpp  scf.cpp  tensor4.cpp
